--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,15 @@
     ],
     "require": {
         "php": "^5.4 || ^7.0",
-        "friendsofsymfony/http-cache": "^1.4.5",
+        "PeerJ/http-cache": "dev-master#1.4.5",
         "symfony/framework-bundle": "^2.3||^3.0"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/PeerJ/http-cache.git"
+        }
+    ],
     "require-dev": {
         "mockery/mockery": "0.9.*",
         "monolog/monolog": "*",
