--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "friendsofsymfony/http-cache": "~1.4",
+        "friendsofsymfony/http-cache": "dev-fix-count",
         "symfony/framework-bundle": "^2.3||^3.0"
     },
     "repositories": [
