updates for symfony 3.4

--- a/Tests/Resources/Fixtures/config/full.yml
+++ b/Tests/Resources/Fixtures/config/full.yml
@@ -95,6 +95,7 @@ fos_http_cache:
         user_identifier_headers:
             - Cookie
             - Authorization
+        session_name_prefix: PHPSESSID
         user_hash_header: FOS-User-Context-Hash
 
     flash_message:
