--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
+        "php": "^5.4 || ^7.0",
         "friendsofsymfony/http-cache": "dev-fix-count",
         "symfony/framework-bundle": "^2.3||^3.0"
     },
@@ -35,12 +35,13 @@
         "mockery/mockery": "0.9.*",
         "monolog/monolog": "*",
         "sensio/framework-extra-bundle": "^2.3||^3.0",
-        "symfony/symfony": "^2.3||^3.0",
-        "symfony/phpunit-bridge": "^2.7||^3.0",
+        "symfony/symfony": "^2.8||^3.0",
+        "symfony/phpunit-bridge": "^3.2",
         "symfony/expression-language": "^2.4||^3.0",
         "symfony/monolog-bundle": "^2.3||^3.0",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
-        "matthiasnoback/symfony-dependency-injection-test": "^0.7.4"
+        "matthiasnoback/symfony-dependency-injection-test": "^0.7.4",
+        "sebastian/exporter": "^1.2||^2.0||^3.0"
     },
     "suggest": {
         "sensio/framework-extra-bundle": "For Tagged Cache Invalidation",
